feat: 🦾 Rota para buscar o Livro com o seu `uuid`
